debug info from individual cog tasks
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@572 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/log4j.properties
+++ b/etc/log4j.properties
@@ -16,3 +16,4 @@ log4j.logger.swift=DEBUG
 log4j.logger.org.griphyn.vdl.karajan.Loader=DEBUG
 log4j.logger.org.griphyn.vdl.toolkit.VDLt2VDLx=DEBUG
 log4j.logger.org.griphyn.vdl.karajan.VDL2ExecutionContext=DEBUG
+log4j.logger.org.globus.cog.abstraction.impl.common.task.TaskImpl=DEBUG
