bug 44 - clean Java stubs generated from XSD when clean build target is invoked
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@617 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/build.xml
+++ b/build.xml
@@ -168,7 +168,7 @@ updateOptions "$SWIFT_HOME" "swift.home"
 	<!-- Clean                                            -->
 	<!-- ================================================ -->
 
-	<target name="clean">
+	<target name="clean" depends="cleanGenerated">
 		<ant antfile="${main.buildfile}" target="clean"/>
 	</target>
 
@@ -177,10 +177,16 @@ updateOptions "$SWIFT_HOME" "swift.home"
 	<!-- Distclean                                        -->
 	<!-- ================================================ -->
 
-	<target name="distclean">
+	<target name="distclean" depends="cleanGenerated">
 		<ant antfile="${main.buildfile}" target="distclean"/>
 	</target>
 
+
+	<target name="cleanGenerated">
+		<delete includeEmptyDirs="true">
+			<fileset dir="src/org/griphyn/vdl/model/" includes="**/*.java"/>
+		</delete>
+	</target>
 
 	<!-- ================================================ -->
 	<!-- Jar                                              -->
