set project version number to where we are. use project version number in swift command's version number display
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@665 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/build.xml
+++ b/build.xml
@@ -65,7 +65,7 @@
 		</copy>
 	</target>
 
-	<target name="dist" depends="antlr, compileSchema">
+	<target name="dist" depends="generateVersion, antlr, compileSchema">
 		<ant antfile="${main.buildfile}" target="dist"/>
 		<mkdir dir="${dist.dir}/libexec"/>
 		<copy todir="${dist.dir}/libexec">
@@ -258,6 +258,10 @@ updateOptions "$SWIFT_HOME" "swift.home"
 
 	<target name="module.package">
 		<ant antfile="${main.buildfile}" target="module.package"/>
+	</target>
+
+	<target name="generateVersion">
+		<echo file="libexec/version.txt">Swift v${version}</echo>
 	</target>
 
 </project>
