--- a/project.properties
+++ b/project.properties
@@ -1,6 +1,11 @@
-module.name 	= vdsk
+module.name = vdsk
 debug = true
-long.name 	= VDSk
-version		= 1.0
-project		= Virtual Data System
-lib.deps	= gvds.*, antlr*.*, jsr173_1.0_api.*, resolver.*, stringtemplate.*, vdldefinitions.*, xbean.*, xbean_xpath.*, jug*.*, jaxrpc*.*
+long.name = Swift
+# Non-dev version numbers should not be committed to the trunk of
+# SVN. A release should be made by manually editing the version number
+# but not committing that. (In future, if it is expected to have a
+# maintenance branch for the release, then the first commit on the
+# stable branch should be a change of version number)
+version = 0.1-dev
+project = Swift workflow system
+lib.deps = gvds.*, antlr*.*, jsr173_1.0_api.*, resolver.*, stringtemplate.*, vdldefinitions.*, xbean.*, xbean_xpath.*, jug*.*, jaxrpc*.*
