--- a/etc/swift.properties
+++ b/etc/swift.properties
@@ -166,7 +166,7 @@ throttle.host.submit=2
 throttle.transfers=4
 
 # Limits the total number of concurrent file operations that can happen at any
-# given time. File operations (like thransfers) require an exclusive connection
+# given time. File operations (like transfers) require an exclusive connection
 # to a site. These connections can be expensive to establish. A large number
 # of concurrent file operations may cause Swift to attempt to establish many 
 # such expensive connections to various sites. Limiting the number of concurrent
