added jobtypes to the pbs provider
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@1635 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/provider-localscheduler/etc/provider-pbs.properties
+++ b/cog/modules/provider-localscheduler/etc/provider-pbs.properties
@@ -14,3 +14,13 @@ qsub=qsub
 # The path to qstat. The default assumes that qstat is in PATH
 #
 qstat=qstat
+
+
+#
+# If the jobType attribute is specified, then the PBS provider
+# will look for a property named "wrapper.<jobType>" and prepend
+# that to the executable line in the PBS script. It will also
+# substitute value of attributes in the job specification, using
+# the "$attrName" notation.
+#
+wrapper.mpi=mpirun -np $count
