--- a/modules/provider-localscheduler/etc/provider-pbs.properties
+++ b/modules/provider-localscheduler/etc/provider-pbs.properties
@@ -14,3 +14,13 @@ qsub=qsub
 # The path to qstat. The default assumes that qstat is in PATH
 #
 qstat=qstat
+
+
+#
+# If the jobType attribute is specified, then the PBS provider
+# will look for a property named "wrapper.<jobType>" and prepend
+# that to the executable line in the PBS script. It will also
+# substitute value of attributes in the job specification, using
+# the "$attrName" notation.
+#
+wrapper.mpi=mpirun -np $count
