added module.package target to the build file
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@1648 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/abstraction-common/build.xml
+++ b/cog/modules/abstraction-common/build.xml
@@ -156,6 +156,10 @@
 	<target name="fixeol">
 		<ant antfile="${main.buildfile}" target="fixeol"/>
 	</target>
+	
+	<target name="module.package">
+		<ant antfile="${main.buildfile}" target="module.package"/>
+	</target>
 </project>
 
 
