'ant clean' will now remove generated vdldefinition.jar
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@896 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/build.xml
+++ b/build.xml
@@ -186,6 +186,7 @@ updateOptions "$SWIFT_HOME" "swift.home"
 		<delete includeEmptyDirs="true">
 			<fileset dir="src/org/griphyn/vdl/model/" includes="**/*.java"/>
 		</delete>
+		<delete file="lib/vdldefinitions.jar"/>
 	</target>
 
 	<!-- ================================================ -->
