--- a/etc/log4j.properties
+++ b/etc/log4j.properties
@@ -17,3 +17,4 @@ log4j.logger.org.griphyn.vdl.karajan.Loader=DEBUG
 log4j.logger.org.griphyn.vdl.toolkit.VDLt2VDLx=DEBUG
 log4j.logger.org.griphyn.vdl.karajan.VDL2ExecutionContext=DEBUG
 log4j.logger.org.globus.cog.abstraction.impl.common.task.TaskImpl=DEBUG
+log4j.logger.org.griphyn.vdl.karajan.lib.GetFieldValue=DEBUG
