provenance graph no longer generated by default. -pgraph option can still be used to turn it on or specify filename.
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@907 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/swift.properties
+++ b/etc/swift.properties
@@ -45,9 +45,9 @@ caching.algorithm=LRU
 # false      - do not generate a provenance graph 
 # <filename> - generate a provenange graph in the give file name
 #
-# Default: true
+# Default: false
 #
-pgraph=true
+pgraph=false
 
 
 #
