added http provider
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@1665 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/provider-webdav/resources/cog-provider.properties
+++ b/cog/modules/provider-webdav/resources/cog-provider.properties
@@ -4,4 +4,8 @@ securityContext=org.globus.cog.abstraction.impl.file.webdav.WebDAVSecurityContex
 fileResource=org.globus.cog.abstraction.impl.file.webdav.FileResourceImpl
 fileOperationTaskHandler=org.globus.cog.abstraction.impl.file.webdav.TaskHandlerImpl
 
-alias=http:webdav
+provider=http
+sandboxing=false
+securityContext=org.globus.cog.abstraction.impl.common.task.SecurityContextImpl
+fileResource=org.globus.cog.abstraction.impl.file.http.FileResourceImpl
+fileOperationTaskHandler=org.globus.cog.abstraction.impl.file.http.TaskHandlerImpl
