--- a/src/cog/modules/provider-webdav/resources/cog-provider.properties
+++ b/src/cog/modules/provider-webdav/resources/cog-provider.properties
@@ -4,4 +4,8 @@ securityContext=org.globus.cog.abstraction.impl.file.webdav.WebDAVSecurityContex
 fileResource=org.globus.cog.abstraction.impl.file.webdav.FileResourceImpl
 fileOperationTaskHandler=org.globus.cog.abstraction.impl.file.webdav.TaskHandlerImpl
 
-alias=http:webdav
+provider=http
+sandboxing=false
+securityContext=org.globus.cog.abstraction.impl.common.task.SecurityContextImpl
+fileResource=org.globus.cog.abstraction.impl.file.http.FileResourceImpl
+fileOperationTaskHandler=org.globus.cog.abstraction.impl.file.http.TaskHandlerImpl
