Use /dev/urandom by default on UNIX platforms to avoid large delays at start-up (and Yoya knows when else). It will lower the security of anything that relies on java.security.SecureRandom. for RNG, but there is no nice way to initialize different SecureRandom instances with different seed generators.
(this was committed as r964 on a development branch by <hategan> but I
would like it get to get tested in the trunk now)


git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1004 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/build.xml
+++ b/build.xml
@@ -109,6 +109,10 @@
 			<replacevalue>updateOptions "$SWIFT_HOME" "COG_INSTALL_PATH"
 updateOptions "$SWIFT_HOME" "vds.home"
 updateOptions "$SWIFT_HOME" "swift.home"
+#Use /dev/urandom instead of /dev/random for seeding RNGs
+#This will lower the randomness of the seed, but avoid
+#large delays if /dev/random does not have enough entropy collected
+updateOptions "file:/dev/urandom" "java.security.egd"
 
 </replacevalue>
 		</replace>
