--- a/cog/modules/karajan/project.properties
+++ b/cog/modules/karajan/project.properties
@@ -1,6 +1,6 @@
 module.name 	= karajan
 long.name 		= Karajan Workflow Engine
-version			= 0.35
+version			= 0.36-dev
 project			= Java CoG Kit
 lib.deps		= xpp3*.jar, xstream*.jar, backport-util-concurrent.jar
 exclude.dirs	= com/thoughtworks/xstream/**/*.*
