exit code regexp
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@1708 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/provider-localscheduler/etc/provider-cobalt.properties
+++ b/cog/modules/provider-localscheduler/etc/provider-cobalt.properties
@@ -14,3 +14,15 @@ cqsub=cqsub
 # The path to cqstat. The default assumes that cqstat is in PATH
 #
 cqstat=cqstat
+
+#
+# A regular expression to fetch the exit code from stderr. The 
+# exit code itself should be in a capturing group (any group). 
+# Use non-caputuring groups (?:X) for or-ing multiple alternatives. E.g.
+# (?:stuff ([0-9]*))|(?:some other stuff ([0-9]*))
+#
+# Backslashes need to be escaped. A literal . (dot; period) would be specified
+# as \\.
+#
+
+exitcode.regexp=(?:.*BG/. job exit status =\\s*([0-9]+))|(?:.*exit status = \\(([0-9]+)\\))
