--- a/src/cog/modules/provider-localscheduler/etc/provider-cobalt.properties
+++ b/src/cog/modules/provider-localscheduler/etc/provider-cobalt.properties
@@ -18,7 +18,7 @@ cqstat=cqstat
 #
 # A regular expression to fetch the exit code from stderr. The 
 # exit code itself should be in a capturing group (any group). 
-# Use non-caputuring groups (?:X) for or-ing multiple alternatives. E.g.
+# Use non-caputuring groups (?:X) for or-ing alternatives. E.g.
 # (?:stuff ([0-9]*))|(?:some other stuff ([0-9]*))
 #
 # Backslashes need to be escaped. A literal . (dot; period) would be specified
