multiple alternatives are more than one
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@1709 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/provider-localscheduler/etc/provider-cobalt.properties
+++ b/cog/modules/provider-localscheduler/etc/provider-cobalt.properties
@@ -18,7 +18,7 @@ cqstat=cqstat
 #
 # A regular expression to fetch the exit code from stderr. The 
 # exit code itself should be in a capturing group (any group). 
-# Use non-caputuring groups (?:X) for or-ing multiple alternatives. E.g.
+# Use non-caputuring groups (?:X) for or-ing alternatives. E.g.
 # (?:stuff ([0-9]*))|(?:some other stuff ([0-9]*))
 #
 # Backslashes need to be escaped. A literal . (dot; period) would be specified
