added job throttling factor to swift.properties
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1123 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/swift.properties
+++ b/etc/swift.properties
@@ -130,6 +130,10 @@ kickstart.always.transfer=false
 ###########################################################################
 #                          Throttling options                             #
 ###########################################################################
+#
+# For the throttling parameters, valid values are either a positive integer
+# or "off" (without the quotes).
+#
 
 #
 # Limits the number of concurrent submissions for a workflow instance. This
@@ -138,11 +142,13 @@ kickstart.always.transfer=false
 # The submission stage in GRAM is one of the most CPU expensive stages (due
 # mostly to the mutual authentication and delegation). Having too many 
 # concurrent submissions can overload either or both the submit host CPU
-# and the remote host/head node causing degraded performance.    
+# and the remote host/head node causing degraded performance.     
 #
 # Default: 4
 #
+
 throttle.submit=4
+#throttle.submit=off
 
 #
 # Limits the number of concurrent submissions for any of the sites Swift will
@@ -152,7 +158,27 @@ throttle.submit=4
 #
 # Default: 2
 #
+
 throttle.host.submit=2
+#throttle.host.submit=off
+
+#
+# The Swift scheduler has the ability to limit the number of concurrent jobs
+# allowed on a site based on the performance history of that site. Each site
+# is assigned a score (initially 1), which can increase or decrease based
+# on whether the site yields successful or faulty job runs. The score for a
+# site can take values in the (0.1, 100) interval. The number of allowed jobs
+# is calculated using the following formula: 
+# 	2 + score*throttle.score.job.factor
+# This means a site will always be allowed at least two concurrent jobs and
+# at most 2 + 100*throttle.score.job.factor. With a default of 4 this means
+# at least 2 jobs and at most 402.
+#
+# Default: 4
+#
+
+throttle.score.job.factor=4
+#throttle.score.job.factor=off
 
 
 #
@@ -163,7 +189,9 @@ throttle.host.submit=2
 #
 # Default: 4
 #
+
 throttle.transfers=4
+#throttle.transfers=off
 
 # Limits the total number of concurrent file operations that can happen at any
 # given time. File operations (like transfers) require an exclusive connection
@@ -175,4 +203,6 @@ throttle.transfers=4
 # 
 # Default: 8
 #
+
 throttle.file.operations=8
+#throttle.file.operations=off
