--- a/build.xml
+++ b/build.xml
@@ -266,7 +266,8 @@ updateOptions "file:/dev/urandom" "java.security.egd"
 	</target>
 
 	<target name="generateVersion">
-		<echo file="libexec/version.txt">Swift v${version}</echo>
+		<echo file="libexec/version.txt">Swift v${version} </echo>
+		<exec executable="libexec/svn-revision" append="true" output="libexec/version.txt"/>
 	</target>
 
 </project>
