no need to change the terminology
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1147 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/error.properties
+++ b/etc/error.properties
@@ -80,7 +80,7 @@ of "\1" in ~/.globus/certificates.\n
 Could not initialize shared directory on (\S*)
 .*[Gg]ridmap lookup failure.*
 ->
-Your certificate is not authorized to use "\1" (gridmap lookup failed).\n
+Your certificate is not authorized to use "\1" (gridmap lookup failure).\n
 Please contact the system administrator of "\1".
 ;
 
