restrict execution of SVN version commands to Linux and Mac OS X so that building on windows should no be affected
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1148 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/build.xml
+++ b/build.xml
@@ -271,7 +271,7 @@ updateOptions "file:/dev/urandom" "java.security.egd"
 
 	<target name="generateVersion">
 		<echo file="libexec/version.txt">Swift v${version} </echo>
-		<exec executable="libexec/svn-revision" append="true" output="libexec/version.txt"/>
+		<exec os="Linux, Mac OS X" executable="libexec/svn-revision" append="true" output="libexec/version.txt"/>
 	</target>
 	
 	<target name="redist" depends="distclean, dist">
