log4j.properties comment was wrong (and has been for some time...)
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1178 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/log4j.properties
+++ b/etc/log4j.properties
@@ -1,4 +1,4 @@
-# Set root category priority to WARN and its only appender to CONSOLE.
+# Set root category priority to WARN and its appenders to CONSOLE and FILE.
 log4j.rootCategory=WARN, CONSOLE, FILE
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
