Changed lazy error default from true to false. This affect how Swift handles workflows when an error occurs. See the userguide for further details.
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1215 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/swift.properties
+++ b/etc/swift.properties
@@ -27,7 +27,7 @@ tc.file=${swift.home}/etc/tc.data
 #
 # Default: true
 #
-lazy.errors=true
+lazy.errors=false
 
 #
 # What algorithm to use for caching of remote files. LRU (as in what
