fix property name in swift.properties inline documentation
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1240 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/swift.properties
+++ b/etc/swift.properties
@@ -69,7 +69,7 @@ pgraph.node.options=color="seagreen", style="filled"
 # true	- clustering of small jobs is enabled. Clustering works in the 
 #       following way: If a job is clusterable (meaning that it has the
 #       GLOBUS::maxwalltime profile specified in tc.data and its value
-#       is less than the value of the "min.cluster.time" property) it will
+#       is less than the value of the "clustering.min.time" property) it will
 #       be put in a clustering queue. The queue is processed at intervals 
 #       specified by the "clustering.queue.delay" property. The processing
 #       of the clustering queue consists of selecting compatible jobs and
