--- a/etc/log4j.properties
+++ b/etc/log4j.properties
@@ -19,4 +19,4 @@ log4j.logger.org.griphyn.vdl.toolkit.VDLt2VDLx=DEBUG
 log4j.logger.org.griphyn.vdl.karajan.VDL2ExecutionContext=DEBUG
 log4j.logger.org.globus.cog.abstraction.impl.common.task.TaskImpl=DEBUG
 log4j.logger.org.griphyn.vdl.karajan.lib.GetFieldValue=DEBUG
-log4j.logger.org.griphyn.vdl.engine.Karajan=DEBUG
+log4j.logger.org.griphyn.vdl.engine.Karajan=INFO
