added tcp port range
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1318 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/swift.properties
+++ b/etc/swift.properties
@@ -9,11 +9,24 @@ tc.file=${swift.home}/etc/tc.data
 # will pick the first one, which may not be the right choice. It is
 # recommended that this property is set properly before attempting to
 # run jobs through GRAM.
+#
 # Format:
 #    ip.address=x.y.z.w
 #
 
 #ip.address=127.0.0.1
+
+#
+# A TCP port range can be specified to restrict the ports on which GRAM
+# callback services are started. This is likely needed if your submit
+# host is behind a firewall, in which case the firewall should be 
+# configured to allow incoming connections on ports in the range.
+#
+# Format:
+#     tcp.port.range=start,end
+#
+
+#tcp.port.range=50000,50100
 
 #
 # false	- means an error will be immediately reported and cause the
