log at info level by default
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1341 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/log4j.properties
+++ b/etc/log4j.properties
@@ -1,5 +1,5 @@
 # Set root category priority to WARN and its appenders to CONSOLE and FILE.
-log4j.rootCategory=WARN, CONSOLE, FILE
+log4j.rootCategory=INFO, CONSOLE, FILE
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
