--- a/etc/log4j.properties
+++ b/etc/log4j.properties
@@ -13,6 +13,8 @@ log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSSZZZZZ} %-
 
 log4j.logger.swift=DEBUG
 
+log4j.logger.org.globus.swift.trace=INFO
+
 log4j.logger.org.griphyn.vdl.karajan.Loader=DEBUG
 log4j.logger.org.griphyn.vdl.toolkit.VDLt2VDLx=DEBUG
 log4j.logger.org.griphyn.vdl.karajan.VDL2ExecutionContext=DEBUG
