log weighted scheduler weightings
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1389 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/log4j.properties
+++ b/etc/log4j.properties
@@ -17,6 +17,7 @@ log4j.logger.org.globus.swift.trace=INFO
 
 log4j.logger.org.griphyn.vdl.karajan.Loader=DEBUG
 log4j.logger.org.globus.cog.karajan.workflow.nodes.FlowNode=WARN
+log4j.logger.org.globus.cog.karajan.scheduler.WeightedHostScoreScheduler=DEBUG
 log4j.logger.org.griphyn.vdl.toolkit.VDLt2VDLx=DEBUG
 log4j.logger.org.griphyn.vdl.karajan.VDL2ExecutionContext=DEBUG
 log4j.logger.org.globus.cog.abstraction.impl.common.task.TaskImpl=DEBUG
