--- a/etc/log4j.properties
+++ b/etc/log4j.properties
@@ -16,6 +16,7 @@ log4j.logger.swift=DEBUG
 log4j.logger.org.globus.swift.trace=INFO
 
 log4j.logger.org.griphyn.vdl.karajan.Loader=DEBUG
+log4j.logger.org.globus.cog.karajan.workflow.events.WorkerSweeper=WARN
 log4j.logger.org.globus.cog.karajan.workflow.nodes.FlowNode=WARN
 log4j.logger.org.globus.cog.karajan.scheduler.WeightedHostScoreScheduler=DEBUG
 log4j.logger.org.griphyn.vdl.toolkit.VDLt2VDLx=DEBUG
