--- a/etc/swift.properties
+++ b/etc/swift.properties
@@ -220,5 +220,12 @@ throttle.transfers=4
 throttle.file.operations=8
 #throttle.file.operations=off
 
+# Indicates whether the working directory on the remote site should be
+# left intact even when the workflow completes successfully. This can be
+# used to inspect the site working directory for debugging purposes.
+#
+# Default: false
+#
+
 sitedir.keep=false
 
