make clustering off by default (I thought that I had done this before, but apparently not).
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1482 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/swift.properties
+++ b/etc/swift.properties
@@ -93,9 +93,9 @@ pgraph.node.options=color="seagreen", style="filled"
 #       variable). 
 # false	- clustering of small jobs is disabled.
 #
-# Default: true
+# Default: false
 #
-clustering.enabled=true
+clustering.enabled=false
 
 
 #
