updated provider properties
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@1841 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/provider-ssh/resources/cog-provider.properties
+++ b/cog/modules/provider-ssh/resources/cog-provider.properties
@@ -1,4 +1,6 @@
 provider=ssh
-executionTaskHandler=org.globus.cog.abstraction.impl.execution.ssh.TaskHandlerImpl
-fileTransferTaskHandler=org.globus.cog.abstraction.impl.execution.ssh.TaskHandlerImpl
-securityContext=org.globus.cog.abstraction.impl.execution.ssh.SSHSecurityContextImpl
+executionTaskHandler=org.globus.cog.abstraction.impl.ssh.execution.TaskHandlerImpl
+fileTransferTaskHandler=org.globus.cog.abstraction.impl.ssh.execution.TaskHandlerImpl
+securityContext=org.globus.cog.abstraction.impl.ssh.SSHSecurityContextImpl
+fileResource=org.globus.cog.abstraction.impl.ssh.file.FileResourceImpl
+fileOperationTaskHandler=org.globus.cog.abstraction.impl.ssh.file.TaskHandlerImpl
