--- a/modules/provider-ssh/resources/cog-provider.properties
+++ b/modules/provider-ssh/resources/cog-provider.properties
@@ -1,4 +1,6 @@
 provider=ssh
-executionTaskHandler=org.globus.cog.abstraction.impl.execution.ssh.TaskHandlerImpl
-fileTransferTaskHandler=org.globus.cog.abstraction.impl.execution.ssh.TaskHandlerImpl
-securityContext=org.globus.cog.abstraction.impl.execution.ssh.SSHSecurityContextImpl
+executionTaskHandler=org.globus.cog.abstraction.impl.ssh.execution.TaskHandlerImpl
+fileTransferTaskHandler=org.globus.cog.abstraction.impl.ssh.execution.TaskHandlerImpl
+securityContext=org.globus.cog.abstraction.impl.ssh.SSHSecurityContextImpl
+fileResource=org.globus.cog.abstraction.impl.ssh.file.FileResourceImpl
+fileOperationTaskHandler=org.globus.cog.abstraction.impl.ssh.file.TaskHandlerImpl
