new parameter, execution.retries to specify the number of time a job will be retried if it fails (giving a maximum of 1 + execution.retries attempts at execution)
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1492 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/swift.properties
+++ b/etc/swift.properties
@@ -229,3 +229,9 @@ throttle.file.operations=8
 
 sitedir.keep=false
 
+# number of time a job will be retried if it fails (giving a maximum of 
+# 1 + execution.retries attempts at execution)
+#
+
+execution.retries=2
+
