--- a/modules/jglobus/project.properties
+++ b/modules/jglobus/project.properties
@@ -1,6 +1,6 @@
 module.name 	= jglobus
 long.name 	= JGlobus
-version		= 1.2-060802
+version		= dev-071125
 project		= Java CoG Kit
 no.javadoc.compile = true
 lib.deps	= cog-jglobus-*.*,cryptix.*,cryptix32.*,jgss.*,jce-jdk13-131.*,cryptix-asn1.*,junit.*,puretls.*,log4j*.*,commons-logging*.*
