updated jglobus jars
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@1847 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/jglobus/project.properties
+++ b/cog/modules/jglobus/project.properties
@@ -1,6 +1,6 @@
 module.name 	= jglobus
 long.name 	= JGlobus
-version		= 1.2-060802
+version		= dev-071125
 project		= Java CoG Kit
 no.javadoc.compile = true
 lib.deps	= cog-jglobus-*.*,cryptix.*,cryptix32.*,jgss.*,jce-jdk13-131.*,cryptix-asn1.*,junit.*,puretls.*,log4j*.*,commons-logging*.*
