--- a/build.xml
+++ b/build.xml
@@ -116,7 +116,7 @@ updateOptions "$SWIFT_HOME" "swift.home"
 #Use /dev/urandom instead of /dev/random for seeding RNGs
 #This will lower the randomness of the seed, but avoid
 #large delays if /dev/random does not have enough entropy collected
-updateOptions "file:/dev/urandom" "java.security.egd"
+updateOptions "file:///dev/urandom" "java.security.egd"
 
 </replacevalue>
 		</replace>
