prohibit network usage by xsltproc in Makefile build of documentation. it was causing hangs in situations where traffic to remote hosts is dropped rather than rejected (as happens to benc quite often)
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1527 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -7,7 +7,7 @@ phps: userguide.php tutorial.php tutorial-live.php quickstartguide.php reallyqui
 pdfs: userguide.pdf tutorial.pdf tutorial-live.pdf quickstartguide.pdf reallyquickstartguide.pdf languagespec.pdf languagespec-0.6.pdf
 
 %.php: %.xml
-	xsltproc formatting/swiftsh_html.xsl $<
+	xsltproc --nonet formatting/swiftsh_html.xsl $<
 	sed -e "s/index.html#/#/g" index.html >$@
 
 %.pdf: %.xml
