make html target for easier viewing of docs in local browser
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1606 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -13,3 +13,5 @@ pdfs: userguide.pdf tutorial.pdf tutorial-live.pdf quickstartguide.pdf reallyqui
 %.pdf: %.xml
 	fop/fop.sh -xsl formatting/vdl2_fo.xsl -xml $< -pdf $@
 
+%.html: %.php
+	cp $< $@
