Stage out wrapper log files in a similar fashion to kickstart records.
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1700 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/swift.properties
+++ b/etc/swift.properties
@@ -140,6 +140,16 @@ kickstart.enabled=maybe
 
 kickstart.always.transfer=false
 
+#
+# Indicates when wrapper logs should be fetched from the remote site:
+# true	- always transfer wrapper logs
+# false	- only transfer wrapper logs if the job fails
+#
+# Default: false
+#
+
+wrapperlog.always.transfer=false
+
 ###########################################################################
 #                          Throttling options                             #
 ###########################################################################
