--- a/build.xml
+++ b/build.xml
@@ -270,7 +270,7 @@ updateOptions "file:///dev/urandom" "java.security.egd"
 	</target>
 
 	<target name="generateVersion">
-		<echo file="libexec/version.txt">Swift v${version} </echo>
+		<echo file="libexec/version.txt">Swift ${version} </echo>
 		<exec os="Linux, Mac OS X" executable="libexec/svn-revision" append="true" output="libexec/version.txt"/>
 	</target>
 	
