--- a/cog/modules/provider-coaster/resources/cog-provider.properties
+++ b/cog/modules/provider-coaster/resources/cog-provider.properties
@@ -1,6 +1,6 @@
 provider=coaster
 sandbox=false
-executionTaskHandler=org.globus.cog.abstraction.impl.execution.local.TaskHandlerImpl
+executionTaskHandler=org.globus.cog.abstraction.impl.execution.coaster.TaskHandlerImpl
 securityContext=org.globus.cog.abstraction.impl.common.task.SecurityContextImpl
 
 
