added job canceling to pbs provider
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@1987 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/provider-localscheduler/etc/provider-pbs.properties
+++ b/cog/modules/provider-localscheduler/etc/provider-pbs.properties
@@ -15,6 +15,11 @@ qsub=qsub
 #
 qstat=qstat
 
+#
+# The path to qdel. The default assumes that qdel is in PATH
+#
+qdel=qdel
+
 
 #
 # If the jobType attribute is specified, then the PBS provider
