added replication props
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1868 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/swift.properties
+++ b/etc/swift.properties
@@ -245,3 +245,18 @@ sitedir.keep=false
 
 execution.retries=2
 
+
+# Enables/disables replication. Replication is used to deal with jobs sitting
+# in batch queues for abnormally large amounts of time. If replication is enabled
+# and certain conditions are met, Swift creates and submits replicas of jobs, and
+# allows multiple instances of a job to compete.
+#
+
+replication.enabled=false
+
+# If replication is enabled, this value specifies the minimum time, in seconds,
+# a job needs to be queued in a batch queue in order to be considered for 
+# replication
+#
+
+replication.min.queue.time=60
