added replica limit
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1944 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/swift.properties
+++ b/etc/swift.properties
@@ -260,3 +260,7 @@ replication.enabled=false
 #
 
 replication.min.queue.time=60
+
+# The maximum number of replicas that Swift should attempt.
+
+replication.limit=3
