use host name instead of ip address
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1955 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/etc/swift.properties
+++ b/etc/swift.properties
@@ -2,19 +2,20 @@ sites.file=${swift.home}/etc/sites.xml
 tc.file=${swift.home}/etc/tc.data
 
 #
-# The IP address of the submit machine is used by GRAM as a callback
+# The host name of the submit machine is used by GRAM as a callback
 # address to report the status of submitted jobs. In general, Swift
-# can automatically detect the IP address of the local machine. 
-# However, if the machine has more than one network interface, Swift
-# will pick the first one, which may not be the right choice. It is
-# recommended that this property is set properly before attempting to
-# run jobs through GRAM.
+# can automatically detect the host name of the local machine. 
+# However, if the machine host name is improperly configured or if
+# it does not represent a valid DNS entry, certain services (such as
+# GRAM) will not be able to send job status notifications back to 
+# the client. The value of this property can be an IP address.
 #
 # Format:
-#    ip.address=x.y.z.w
+#    hostname=string
 #
 
-#ip.address=127.0.0.1
+
+#hostname=localhost
 
 #
 # A TCP port range can be specified to restrict the ports on which GRAM
@@ -264,3 +265,20 @@ replication.min.queue.time=60
 # The maximum number of replicas that Swift should attempt.
 
 replication.limit=3
+
+#
+# WARNING: This option is deprecated. Please use the hostname option.
+#
+# The IP address of the submit machine is used by GRAM as a callback
+# address to report the status of submitted jobs. In general, Swift
+# can automatically detect the IP address of the local machine. 
+# However, if the machine has more than one network interface, Swift
+# will pick the first one, which may not be the right choice. It is
+# recommended that this property is set properly before attempting to
+# run jobs through GRAM.
+#
+# Format:
+#    ip.address=x.y.z.w
+#
+
+#ip.address=127.0.0.1
