swift command sets hostname from OS $HOSTNAME variable before running JVM - this is hopefully more reliable than determining inside the JVM
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1981 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/build.xml
+++ b/build.xml
@@ -118,6 +118,11 @@ updateOptions "$SWIFT_HOME" "swift.home"
 #large delays if /dev/random does not have enough entropy collected
 updateOptions "file:///dev/urandom" "java.security.egd"
 
+if [ "X$GLOBUS_HOSTNAME" == "X" ] &amp;&amp; [ "X$HOSTNAME" != "X" ]; then
+ GLOBUS_HOSTNAME=$HOSTNAME
+ export HOSTNAME
+fi
+
 </replacevalue>
 		</replace>
 
