pass $HOSTNAME to jglobus; revert r1981
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1983 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/build.xml
+++ b/build.xml
@@ -113,15 +113,11 @@
 			<replacevalue>updateOptions "$SWIFT_HOME" "COG_INSTALL_PATH"
 updateOptions "$SWIFT_HOME" "vds.home"
 updateOptions "$SWIFT_HOME" "swift.home"
+updateOptions "$HOSTNAME" "hostname"
 #Use /dev/urandom instead of /dev/random for seeding RNGs
 #This will lower the randomness of the seed, but avoid
 #large delays if /dev/random does not have enough entropy collected
 updateOptions "file:///dev/urandom" "java.security.egd"
-
-if [ "X$GLOBUS_HOSTNAME" == "X" ] &amp;&amp; [ "X$HOSTNAME" != "X" ]; then
- GLOBUS_HOSTNAME=$HOSTNAME
- export HOSTNAME
-fi
 
 </replacevalue>
 		</replace>
