--- a/etc/error.properties
+++ b/etc/error.properties
@@ -38,7 +38,7 @@ Application "\1" failed (\7)\n
 
 The cache already contains (\S*)\..*
 ->
-Multiple mappings poiting to the same file (\1) detected.
+Multiple mappings pointing to the same file (\1) detected.
 ;
 
 .*Could not initialize shared directory on (\S*).*
