--- a/modules/transfer-gui/src/org/globus/transfer/reliable/client/resources/GridFTPGUIView.properties
+++ b/modules/transfer-gui/src/org/globus/transfer/reliable/client/resources/GridFTPGUIView.properties
@@ -34,11 +34,14 @@ jMenu1.text=Connect
 jMenuItem1.text=GridFTP
 jMenuItem2.text=Local
 jMenu2.text=Security
+jMenu3.text=Log
 jMenuItem3.text=Create Grid Proxy
 jMenuItem4.text=Destroy Grid Proxy
 jMenuItem5.text=Grid Proxy Info
 jMenuItem6.text=Load
 jMenuItem7.text=Save
+jMenuItem11.text=Log Location
+jMenuItem12.text=Log Config
 #NOI18N
 jButton1.icon=unlock.png
 jButton3.text=Local
