--- a/src/cog/modules/transfer-gui/src/org/globus/transfer/reliable/client/resources/GridFTPGUIView.properties
+++ b/src/cog/modules/transfer-gui/src/org/globus/transfer/reliable/client/resources/GridFTPGUIView.properties
@@ -43,17 +43,19 @@ jMenuItem7.text=Save
 jMenuItem11.text=Log Location
 jMenuItem12.text=Log Config
 #NOI18N
-jButton1.icon=unlock.png
-jButton3.text=Local
+local_button.icon=window_new.png
+local_button.text=Local
 #NOI18N
 jButton5.icon=rft.png
-jButton5.text=RFT
+jButton5.text=Advanced
 #NOI18N
-jButton3.icon=window_new.png
-jButton2.toolTipText=Open remote directory
-jButton2.text=GridFTP
+
+gridftp_button.icon=window_new_gridftp.png
+gridftp_button.toolTipText=Open remote directory
+gridftp_button.text=GridFTP
 #NOI18N
-jButton2.icon=window_new_gridftp.png
+
+jButton1.icon=unlock.png
 jButton1.toolTipText=Create a new credential
 jButton1.text=Generate Credential
 #NOI18N
@@ -64,6 +66,10 @@ jButton7.text=Obtain Credential
 jButton8.icon=unlock.png
 jButton8.toolTipText=setup a log file
 jButton8.text=Log Config
+
+credential_button.icon=unlock.png
+credential_button.toolTipText=create credential
+credential_button.text= Credential
 #NOI18N
 jDesktopPane1.background=236, 233, 216
 jMenuItem8.text=FTP
