--- a/src/cog/modules/transfer-gui/src/org/globus/transfer/reliable/client/resources/RFTPanel.properties
+++ b/src/cog/modules/transfer-gui/src/org/globus/transfer/reliable/client/resources/RFTPanel.properties
@@ -1,6 +1,6 @@
 startButton.text=Start
 stopButton.text=Stop
-restartButton.text=Load File
+restartButton.text=OK
 jLabel1.text=Finished
 jLabel3.text=Active
 jLabel5.text=Failed
